# TecnoUPSA2025

RustBall/: Cargo.toml  README.md  Trunk.toml  bootstrap.js  index.html
RustBall/src/: Components.rs  Events.rs  Resources.rs  formation.rs  formation_selection.rs  game_over.rs  lib.rs  powerup.rs  snapshot.rs  zone.rs
RustBall/src/setup/: ball.rs  camera.rs  field.rs  goals.rs  mod.rs  players.rs  ui.rs
RustBall/src/systems/: apply_snapshot.rs  backend_setup.rs  goal_systems.rs  input_systems.rs  mod.rs  poll_turn.rs  process_ws.rs  random_event_system.rs  reset_for_formation.rs  send_formacion.rs  send_goal.rs  send_turn.rs  turn_systems.rs  ui_systems.rs  visual_systems.rs
frontend/: index.html  lobby.html  login.html  registro.html
frontend/game/: index.html  rustball.js
frontend/js/: estadisticas.js  lobby.js  login.js
rustball_backend/: .env  Cargo.toml
rustball_backend/src/: db_mysql.rs  handlers.rs  main.rs  models.rs
rustball_backend/src/routes/: websocket.rs
rustball_backend/webapp/: estadisticas.html  lobby.html  partidas.html
rustball_backend/webapp/css/: styles.css
rustball_backend/webapp/game/: bootstrap.js  index.html  rustball.js
rustball_backend/webapp/js/: api.js  lobby.js  login.js  partidas.js  registro.js  utils.js
