[package]
name = "rustball"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
bevy = { version = "0.12.1", default-features = false, features = [
    "bevy_audio",
    "bevy_asset",
    "bevy_scene",
    "bevy_winit",
    "bevy_ui",
    "webgl2",
    "default_font",
    "png",
    "jpeg",
    "vorbis",
    "mp3",
    "x11" # Necesario en algunas distros o para asegurar compatibilidad con Winit
] }

rand = "0.8"
wasm-bindgen = "0.2"

bevy_rapier2d = { version = "0.24", features = ["default"] }
fastrand = "2.3.0"

# Estas dos se dividen según el target

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.38", features = ["full"] }
uuid = { version = "1.3", features = ["v4"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
uuid = { version = "1.3", features = ["v4", "js"] }
log         = "0.4"      # macros info!, warn!, etc.
wasm-logger = "0.2"      # envía los logs al console del navegador
