[package]
name = "rustball_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros", "ws"] }
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.5", features = ["v4", "serde"] }
hyper = "1"
tower-http = { version = "0.5", features = ["cors", "fs"] }
dotenvy = "0.15"

# ✅ sqlx con soporte para MySQL + macros + chrono + JSON
sqlx = { version = "0.7", features = ["mysql", "runtime-tokio-native-tls", "macros", "chrono", "json"] }

# ✅ chrono con soporte para serde
chrono = { version = "0.4", features = ["serde"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.8.5"
futures-util = "0.3.31"

